--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Afoil</string>
+    <string name="no_projects_dir_selected_message">
+        No projects directory selected. Please select a projects directory first.
+    </string>
+    <string name="select_directory">Select directory</string>
 </resources>
