--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="core_designsystem_nextprevbottombar_next">Next</string>
     <string name="core_designsystem_nextprevbottombar_done">Done</string>
     <string name="core_designsystem_numerictextfield_error_message">Please enter a valid number</string>
+    <string name="core_designsystem_onebuttoncard_close_content_desc">Close</string>
 </resources>
